# shelldon

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: 1-1-greenfield-scaffold-with-an-enforced-llm-free-core-and-m0-tests.md  1-2-versioned-message-contracts.md  1-3-envelope-bus-over-unix-domain-sockets-hub-routed-through-core.md  1-4-capability-broker-with-one-provider-and-basic-retry.md  1-5-fork-server-worker-that-runs-one-turn-and-dies.md  1-6-one-chat-transport-adapter-over-a-transport-agnostic-contract.md  1-7-display-service-shows-the-pets-face-from-core-state.md  1-8-end-to-end-turn-message-in-reply-out-face-reacts.md  1-9-endurance-sustained-turns-without-memory-growth.md  10-1-persona-files-seed-and-prompt-read.md  10-2-bot-write-ops-awareness-and-gated-directive.md  10-3-proactive-dream-prompts-to-files-and-autonomous-edit.md  10-4-first-run-onboarding.md  10-5-cost-caching-lazyload-reference-and-pi-migration.md  2-1-provider-abstraction-and-an-ordered-chain.md  2-2-automatic-fallback-through-the-chain.md  2-3-degrade-to-reflex-only-when-the-whole-chain-fails.md  3-1-persistent-personality-state-struct.md  3-2-resident-reflex-loop.md  3-3-expressive-face-via-the-display-compositor.md  3-4-self-modify-faces-via-chat.md  4-1-conversation-history-store.md  4-2-curated-markdown-memory-and-memory-ops.md  4-3-vault-with-os-level-isolation.md  4-4-memory-shapes-the-turn.md  4-5-worker-proposes-ops-wire.md  5-0-resilience-hardening-prep.md  5-1-core-scheduler-with-named-multi-cadence-jobs.md  5-2-cost-tier-gating-and-credit-budget.md  5-3-battery-aware-backoff.md  5-4-proactive-action.md  6-1-capture-learnings-on-the-hot-path.md  6-2-dream-cycle-classify-promote-prune.md  7-0-extract-turn-dispatch-from-runtime.md  7-1-plugin-host-and-the-generalized-plugin-contract.md  7-2-broadcast-event-subscriptions.md  7-3-xp-leveling-plugin-optional.md  7-4-optional-physical-sensing-button-ble-presence.md  7-5-mood-nudge-plugin-affect-channel.md  8-0-live-llm-smoke-full-stack-verification.md  (+27 more)
_bmad-output/planning-artifacts/: epic-10-persona-files-design-2026-06-25.md  epic-9-self-coding-design-2026-06-21.md  epics.md  implementation-readiness-report-2026-06-16.md
deploy/: setup-pi.sh
shelldon/: __init__.py  __main__.py  app.py  timeouts.py
shelldon/broker/: __init__.py  anthropic_provider.py  broker.py  chain.py  glm.py  openai_provider.py  provider.py  service.py  vault.py
tests/: conftest.py  test_anthropic_provider.py  test_app_root.py  test_arbiter.py  test_battery.py  test_battery_backoff.py  test_broker_bus.py  test_broker_chain_fallback.py  test_broker_creds.py  test_broker_fallback_soak.py  test_broker_glm.py  test_broker_reconnect.py  test_broker_retry.py  test_broker_service.py  test_broker_service_branches.py  test_broker_vault_authority.py  test_budget.py  test_bus_disconnect.py  test_bus_errors.py  test_bus_frame.py  test_bus_routing.py  test_caption.py  test_chain.py  test_cli_transport.py  test_contracts_roundtrip.py  test_core_llm_free.py  test_display_routing.py  test_display_service.py  test_end_to_end_turn.py  test_endurance_soak.py  test_event_contract.py  test_face_art.py  test_faces.py  test_forkserver.py  test_forkserver_fork.py  test_forkserver_privdrop.py  test_free_tools.py  test_full_stack_live_smoke.py  test_glm_live_smoke.py  test_history.py  (+41 more)
(+62 files in other folders)
