[project]
name = "shelldon"
version = "0.1.0"
description = "An E-Ink AI pet for the Raspberry Pi Zero 2W — chat-first, remote-LLM brain."
readme = "README.md"
requires-python = ">=3.13,<3.14"     # pinned to the Pi OS target (3.13.x)
license = { file = "LICENSE" }
authors = [{ name = "Elliot Boney" }]
dependencies = [
    "msgspec==0.21.1",               # versioned typed contracts + bus framing (AD-4/AD-10)
    "anthropic==0.109.2",            # broker-only: GLM-5.2 via Z.ai Anthropic-compatible endpoint (AD-2)
    "openai==2.42.0",                # broker-only: OpenAI-compatible adapters — Ollama/OpenAI/OpenRouter/Groq/Cerebras/NVIDIA/Mistral/GitHub/Gemini (AD-2)
]

[dependency-groups]
dev = [
    "import-linter~=2.3",
    "pytest>=8",
    "pytest-asyncio==1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shelldon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Live/network tests are opt-in: a default `pytest` never hits the network (and never
# breaks because a key happens to be in the ambient env). Run them with `pytest -m live`.
addopts = "-m 'not live'"
markers = [
    "soak: long-running endurance/soak proof (NFR2)",
    "live: hits a real network provider; opt-in only (run with -m live)",
]

# AD-1: core/ must never import an LLM/provider library — enforced mechanically.
[tool.importlinter]
root_package = "shelldon"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "core is LLM-free (AD-1)"
type = "forbidden"
source_modules = ["shelldon.core"]
forbidden_modules = [
    "openai",
    "anthropic",
    "google",
    "litellm",
    "zhipuai",
    "ollama",
]

# AD-13/NFR9: a chat-transport adapter owns only its own connection credential and
# never touches model/tool creds — the broker is the sole holder (AD-2). Proven
# mechanically: transport/ imports no provider SDK and no broker cred path.
[[tool.importlinter.contracts]]
name = "transport holds no model/tool creds (AD-13/NFR9)"
type = "forbidden"
source_modules = ["shelldon.transport"]
forbidden_modules = [
    "openai",
    "anthropic",
    "google",
    "litellm",
    "zhipuai",
    "ollama",
    "shelldon.broker",
]
